--- a/pom.xml
+++ b/pom.xml
@@ -130,6 +130,11 @@
 			<artifactId>dss-tsl-validation</artifactId>
 			<version>${dss.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>eu.europa.ec.joinup.sd-dss</groupId>
+			<artifactId>dss-utils-google-guava</artifactId>
+			<version>${dss.version}</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.apache.tika</groupId>
@@ -163,6 +168,16 @@
 		<dependency>
 			<groupId>commons-collections</groupId>
 			<artifactId>commons-collections</artifactId>
+		</dependency>
+		<dependency>
+		    <groupId>com.google.guava</groupId>
+		    <artifactId>guava</artifactId>
+		    <version>23.6-jre</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.4</version>
 		</dependency>
 	</dependencies>
 
